--- a/themes/linux/css/sass/components/_navs.scss
+++ b/themes/linux/css/sass/components/_navs.scss
@@ -363,7 +363,7 @@
 
 ul.tabs.primary {
   float: left;
-  //width: 100%;
+  width: 100%;
   margin: 0;
   padding: 15px;
   border-bottom: none;
